[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/UI/MaxScoreButton/MaxScoreButton.gd" type="Script" id=1]
[ext_resource path="res://Assets/ButtonFont.tres" type="DynamicFont" id=3]

[node name="MaxScoreButton" type="TextureButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -8.0
margin_right = 115.0
margin_bottom = 8.0
rect_min_size = Vector2( 175, 16 )
script = ExtResource( 1 )

[node name="Background" type="NinePatchRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 88, 16 )
custom_fonts/font = ExtResource( 3 )
text = "Max Score: "
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 88.0
margin_right = 124.0
margin_bottom = 16.0
rect_min_size = Vector2( 36, 16 )

[node name="LeftArrow" type="Label" parent="HBoxContainer"]
margin_right = 8.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 3 )
text = "<"
align = 1
valign = 1

[node name="ValueLabel" type="Label" parent="HBoxContainer"]
margin_left = 12.0
margin_right = 24.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 3 )
text = "3 "
align = 1
valign = 1

[node name="RightArrow" type="Label" parent="HBoxContainer"]
margin_left = 28.0
margin_right = 36.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 3 )
text = ">"
align = 1
valign = 1

[node name="FocusIndicator" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
color = Color( 1, 1, 1, 0 )
